--- a/Skillfactory/PYTHON-13. Визуализация данных/практика.ipynb
+++ b/Skillfactory/PYTHON-13. Визуализация данных/практика.ipynb
@@ -168,8 +168,7 @@
     "import plotly.express as px\n",
     "\n",
     "churn_data = pd.read_csv('data/churn.csv')\n",
-    "churn_data.head()\n",
-    "#churn_data.info()"
+    "churn_data.head()\n"
    ]
   },
   {
