Практика SF 13 Vis

--- a/Skillfactory/PYTHON-13. Визуализация данных/практика.ipynb
+++ b/Skillfactory/PYTHON-13. Визуализация данных/практика.ipynb
@@ -2,162 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>RowNumber</th>\n",
-       "      <th>CustomerId</th>\n",
-       "      <th>Surname</th>\n",
-       "      <th>CreditScore</th>\n",
-       "      <th>Geography</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Tenure</th>\n",
-       "      <th>Balance</th>\n",
-       "      <th>NumOfProducts</th>\n",
-       "      <th>HasCrCard</th>\n",
-       "      <th>IsActiveMember</th>\n",
-       "      <th>EstimatedSalary</th>\n",
-       "      <th>Exited</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>15634602</td>\n",
-       "      <td>Hargrave</td>\n",
-       "      <td>619</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>101348.88</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>15647311</td>\n",
-       "      <td>Hill</td>\n",
-       "      <td>608</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>41</td>\n",
-       "      <td>1</td>\n",
-       "      <td>83807.86</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112542.58</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>15619304</td>\n",
-       "      <td>Onio</td>\n",
-       "      <td>502</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>42</td>\n",
-       "      <td>8</td>\n",
-       "      <td>159660.80</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113931.57</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>15701354</td>\n",
-       "      <td>Boni</td>\n",
-       "      <td>699</td>\n",
-       "      <td>France</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>93826.63</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>15737888</td>\n",
-       "      <td>Mitchell</td>\n",
-       "      <td>850</td>\n",
-       "      <td>Spain</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>43</td>\n",
-       "      <td>2</td>\n",
-       "      <td>125510.82</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>79084.10</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   RowNumber  CustomerId   Surname  CreditScore Geography  Gender  Age   \n",
-       "0          1    15634602  Hargrave          619    France  Female   42  \\\n",
-       "1          2    15647311      Hill          608     Spain  Female   41   \n",
-       "2          3    15619304      Onio          502    France  Female   42   \n",
-       "3          4    15701354      Boni          699    France  Female   39   \n",
-       "4          5    15737888  Mitchell          850     Spain  Female   43   \n",
-       "\n",
-       "   Tenure    Balance  NumOfProducts  HasCrCard  IsActiveMember   \n",
-       "0       2       0.00              1          1               1  \\\n",
-       "1       1   83807.86              1          0               1   \n",
-       "2       8  159660.80              3          1               0   \n",
-       "3       1       0.00              2          0               0   \n",
-       "4       2  125510.82              1          1               1   \n",
-       "\n",
-       "   EstimatedSalary  Exited  \n",
-       "0        101348.88       1  \n",
-       "1        112542.58       0  \n",
-       "2        113931.57       1  \n",
-       "3         93826.63       0  \n",
-       "4         79084.10       0  "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m/home/anton/IDE/Skillfactory/PYTHON-13. Визуализация данных/практика.ipynb Ячейка 1\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/anton/IDE/Skillfactory/PYTHON-13.%20%D0%92%D0%B8%D0%B7%D1%83%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/anton/IDE/Skillfactory/PYTHON-13.%20%D0%92%D0%B8%D0%B7%D1%83%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/anton/IDE/Skillfactory/PYTHON-13.%20%D0%92%D0%B8%D0%B7%D1%83%D0%B0%D0%BB%D0%B8%D0%B7%D0%B0%D1%86%D0%B8%D1%8F%20%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D1%85/%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D0%B0.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
     }
    ],
    "source": [
@@ -1246,6 +1103,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ушедших клиентов почти в 5 раз меньше чем лояльных"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -1301,6 +1165,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Основная часть пользователей с балансом от 50000 до 175000"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1342,6 +1213,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "У ушедших клиентов в общем случае меньше средств на счетах. Баланс лояльных клиентов составляет основную долю в структуре баланса клиентов"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -1378,6 +1256,13 @@
     "    color='red',\n",
     "    ax=axes[1]\n",
     ");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Потенциальных выбросов больше в группе ушедших клиентов (возраст 80-90). Обратить внимание стоит на возрастную группу от 40 до 50 их больше всего среди ушедших клиентов."
    ]
   },
   {
@@ -32329,6 +32214,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Явной взаимосвязи не замечено"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -33239,6 +33131,13 @@
     ")\n",
     "fig2.show()\n",
     "# Вывод: Женщины уходят в 1.5 раза чаще, чем мужчины "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Женщины уходят в полтора раза чаще чем мужчины"
    ]
   },
   {
@@ -34414,6 +34313,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Чем больше продуктов, тем меньше ушедших клиентов в абсолютных значениях. Но в процентном соотношении четкой тенденции нет. При одном продукте доля ушедших около 28 процентов, при 2х продуктах доля ушедших около 7 процентов - т.е. при изменении статуса клиента от только пришедшего (т.е. он пользуется 1 продуктом и думает приобретать ли второй) к постоянному (т.е. он уже приобрел второй продукт потому, что он доволен первым и самим банком) его лояльность к банку повышается. Затем при покупке 3 продукта возможно у клиента складываются завышенные ожидания. При трех продуктах доля ушедших 83 процента, при четырех продуктах доля ушедших 100 процентов, т.е. все кто приобрел 4 продукта уходят."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -35363,6 +35269,13 @@
     "\n",
     "#отображаем его\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Активные клиенты уходят реже. Делать из неактивных клиентов активных, продавая им второй продукт "
    ]
   },
   {
@@ -36506,6 +36419,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Доля ушедших клиентов больше в Германии. С чем это может быть "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -37009,6 +36929,13 @@
     "# На основе полученной сводной таблицы постройте тепловую карту с аннотацией.\n",
     "# Найдите на тепловой карте категории клиентов, которые уходят чаще всего."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Чаще всего уходят клиенты категории Very_Poor в течении первого года. Часто уходят клиенты той же категории которые пользовались услугами банка в течении 10 лет. Клиенты категории Excellent также уходят достаточно часто в течении первого года обслуживания"
+   ]
   }
  ],
  "metadata": {
@@ -37027,7 +36954,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4
  },
